force-app/main/default/objects/Account/fields/Actividad_codigo__c.field-meta.xml
<CustomField>
    <fullName>Actividad_codigo__c</fullName>
    <label>Actividad código</label>
    <length>255</length>
    <type>Text</type>
</CustomField>