force-app/main/default/objects/Account/fields/Actividad_nombre__c.field-meta.xml
<CustomField>
    <fullName>Actividad_nombre__c</fullName>
    <label>Actividad nombre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>