force-app/main/default/objects/Account/fields/Afi_Id__c.field-meta.xml
<CustomField>
    <fullName>Afi_Id__c</fullName>
    <externalId>true</externalId>
    <label>Afi Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>