force-app/main/default/objects/Account/fields/Afi_Id_del_Titular__c.field-meta.xml
<CustomField>
    <fullName>Afi_Id_del_Titular__c</fullName>
    <label>Afi Id del Titular</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>