force-app/main/default/objects/Account/fields/Afiliacion__c.field-meta.xml
<CustomField>
    <fullName>Afiliacion__c</fullName>
    <label>Asociación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aporte</fullName>
            </value>
            <value>
                <fullName>Aporte Obligatorio</fullName>
            </value>
            <value>
                <fullName>Sin aportes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>