force-app/main/default/objects/Account/fields/Afiliados_sujetos_de_facturacion__c.field-meta.xml
<CustomField>
    <fullName>Afiliados_sujetos_de_facturacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Afiliados sujetos de facturación</label>
    <type>Checkbox</type>
</CustomField>