force-app/main/default/objects/Account/fields/Agencia_codigo__c.field-meta.xml
<CustomField>
    <fullName>Agencia_codigo__c</fullName>
    <label>Agencia código</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>