force-app/main/default/objects/Account/fields/Agencia_nombre__c.field-meta.xml
<CustomField>
    <fullName>Agencia_nombre__c</fullName>
    <label>Agencia nombre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>