force-app/main/default/objects/Account/fields/Alerta_de_permanencia__c.field-meta.xml
<CustomField>
    <fullName>Alerta_de_permanencia__c</fullName>
    <formula>IF(
 AND(
     TODAY() &gt; Fecha_permanencia_desde__c,
     OR(
        TODAY() &lt; Fecha_permanencia_hasta__c,
        ISBLANK(Fecha_permanencia_hasta__c)
     )
 ), 
 &quot; ❗️❗️ El Asociado tiene una alerta de permanencia ❗️❗️&quot; ,
 &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alerta de permanencia</label>
    <type>Text</type>
</CustomField>