force-app/main/default/objects/Account/fields/Antiguedad_reconocida__c.field-meta.xml
<CustomField>
    <fullName>Antiguedad_reconocida__c</fullName>
    <label>Antigüedad reconocida</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>