force-app/main/default/objects/Account/fields/Aporta__c.field-meta.xml
<CustomField>
    <fullName>Aporta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aporta</label>
    <type>Checkbox</type>
</CustomField>