force-app/main/default/objects/Account/fields/Auditoria__c.field-meta.xml
<CustomField>
    <fullName>Auditoria__c</fullName>
    <label>Auditoría</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nunca</fullName>
            </value>
            <value>
                <fullName>Siempre</fullName>
            </value>
            <value>
                <fullName>Cantidad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>