force-app/main/default/objects/Account/fields/Autonumerico__c.field-meta.xml
<CustomField>
    <fullName>Autonumerico__c</fullName>
    <displayFormat>A-{00000000}</displayFormat>
    <label>Autonumerico</label>
    <type>AutoNumber</type>
</CustomField>