force-app/main/default/objects/Account/fields/Canjes__c.field-meta.xml
<CustomField>
    <fullName>Canjes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Canjes</label>
    <type>Checkbox</type>
</CustomField>