force-app/main/default/objects/Account/fields/Cantidad_de_preexistencias__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_preexistencias__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cantidad de preexistencias</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>