force-app/main/default/objects/Account/fields/Categoria_codigo__c.field-meta.xml
<CustomField>
    <fullName>Categoria_codigo__c</fullName>
    <label>Categoría código</label>
    <length>255</length>
    <type>Text</type>
</CustomField>