force-app/main/default/objects/Account/fields/Categoria_de_Asociado__c.field-meta.xml
<CustomField>
    <fullName>Categoria_de_Asociado__c</fullName>
    <label>Categoría de Asociado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GEN</fullName>
                <label>Genérico</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>