force-app/main/default/objects/Account/fields/Categoria_Nombre__c.field-meta.xml
<CustomField>
    <fullName>Categoria_Nombre__c</fullName>
    <label>Categoría Nombre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>