force-app/main/default/objects/Account/fields/Clase_efector__c.field-meta.xml
<CustomField>
    <fullName>Clase_efector__c</fullName>
    <description>Clases en el RT Efector, texto que llega de la int</description>
    <label>Clase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>