force-app/main/default/objects/Account/fields/Clase_obra_social__c.field-meta.xml
<CustomField>
    <fullName>Clase_obra_social__c</fullName>
    <label>Clase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>