force-app/main/default/objects/Account/fields/Codigo_Agrupacion__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Agrupacion__c</fullName>
    <label>Código Agrupación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>