force-app/main/default/objects/Account/fields/Codigo_de_Afiliado__c.field-meta.xml
<CustomField>
    <fullName>Codigo_de_Afiliado__c</fullName>
    <externalId>true</externalId>
    <label>Código de Asociado</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>