force-app/main/default/objects/Account/fields/Codigo_de_empresa__c.field-meta.xml
<CustomField>
    <fullName>Codigo_de_empresa__c</fullName>
    <externalId>true</externalId>
    <label>Código de empresa</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>