force-app/main/default/objects/Account/fields/Codigo_de_Entidad__c.field-meta.xml
<CustomField>
    <fullName>Codigo_de_Entidad__c</fullName>
    <label>Código de Entidad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>