force-app/main/default/objects/Account/fields/Codigo_de_obra_social__c.field-meta.xml
<CustomField>
    <fullName>Codigo_de_obra_social__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Código de obra social</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>