force-app/main/default/objects/Account/fields/Codigo_financiero__c.field-meta.xml
<CustomField>
    <fullName>Codigo_financiero__c</fullName>
    <label>Código financiero</label>
    <length>255</length>
    <type>Text</type>
</CustomField>