force-app/main/default/objects/Account/fields/Codigo_grupo_empresarial__c.field-meta.xml
<CustomField>
    <fullName>Codigo_grupo_empresarial__c</fullName>
    <label>Código grupo empresarial</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>