force-app/main/default/objects/Account/fields/Codigo_pais__c.field-meta.xml
<CustomField>
    <fullName>Codigo_pais__c</fullName>
    <label>Código país</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>054</fullName>
                <label>ARGENTINA</label>
            </value>
            <value>
                <fullName>591</fullName>
                <label>BOLIVIA</label>
            </value>
            <value>
                <fullName>055</fullName>
                <label>BRASIL</label>
            </value>
            <value>
                <fullName>056</fullName>
                <label>CHILE</label>
            </value>
            <value>
                <fullName>057</fullName>
                <label>COLOMBIA</label>
            </value>
            <value>
                <fullName>506</fullName>
                <label>COSTA RICA</label>
            </value>
            <value>
                <fullName>053</fullName>
                <label>CUBA</label>
            </value>
            <value>
                <fullName>593</fullName>
                <label>ECUADOR</label>
            </value>
            <value>
                <fullName>503</fullName>
                <label>EL SALVADOR</label>
            </value>
            <value>
                <fullName>410</fullName>
                <label>ESPANA</label>
            </value>
            <value>
                <fullName>502</fullName>
                <label>GUATEMALA C.A.</label>
            </value>
            <value>
                <fullName>592</fullName>
                <label>GUYANA</label>
            </value>
            <value>
                <fullName>509</fullName>
                <label>HAITI</label>
            </value>
            <value>
                <fullName>504</fullName>
                <label>HONDURAS</label>
            </value>
            <value>
                <fullName>039</fullName>
                <label>ITALIA</label>
            </value>
            <value>
                <fullName>322</fullName>
                <label>MEXICO</label>
            </value>
            <value>
                <fullName>505</fullName>
                <label>NICARAGUA</label>
            </value>
            <value>
                <fullName>507</fullName>
                <label>PANAMA</label>
            </value>
            <value>
                <fullName>595</fullName>
                <label>PARAGUAY</label>
            </value>
            <value>
                <fullName>051</fullName>
                <label>PERU</label>
            </value>
            <value>
                <fullName>809</fullName>
                <label>REPUBLICA DOMINICANA</label>
            </value>
            <value>
                <fullName>598</fullName>
                <label>URUGUAY</label>
            </value>
            <value>
                <fullName>058</fullName>
                <label>VENEZUELA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>