force-app/main/default/objects/Account/fields/Codigo_RNOS__c.field-meta.xml
<CustomField>
    <fullName>Codigo_RNOS__c</fullName>
    <label>Código RNOS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>