force-app/main/default/objects/Account/fields/Codigo_Subgrupo__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Subgrupo__c</fullName>
    <label>Código Subgrupo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>