force-app/main/default/objects/Account/fields/Color_estado_de_cuenta__c.field-meta.xml
<CustomField>
    <fullName>Color_estado_de_cuenta__c</fullName>
    <label>Color estado de cuenta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>