force-app/main/default/objects/Account/fields/Color_scoring__c.field-meta.xml
<CustomField>
    <fullName>Color_scoring__c</fullName>
    <label>Color scoring</label>
    <length>255</length>
    <type>Text</type>
</CustomField>