force-app/main/default/objects/Account/fields/Contiene_expediente_legal__c.field-meta.xml
<CustomField>
    <fullName>Contiene_expediente_legal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contiene Expediente Legal</label>
    <type>Checkbox</type>
</CustomField>