force-app/main/default/objects/Account/fields/Correo_electronico__c.field-meta.xml
<CustomField>
    <fullName>Correo_electronico__c</fullName>
    <description>Correo electronico custom, creado para todas las cuentas menos los asociados</description>
    <label>Correo electrónico</label>
    <type>Email</type>
</CustomField>