force-app/main/default/objects/Account/fields/Correo_gerencia_cooperativa__c.field-meta.xml
<CustomField>
    <fullName>Correo_gerencia_cooperativa__c</fullName>
    <label>Correo gerencia cooperativa</label>
    <type>Email</type>
</CustomField>