force-app/main/default/objects/Account/fields/Cuenta_personal__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_personal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta personal</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Sólo puede agregar Asociado.</errorMessage>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>0121U00000038N8QAI</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cuentas (Cuenta personal)</relationshipLabel>
    <relationshipName>Cuentapersonal</relationshipName>
    <type>Lookup</type>
</CustomField>