force-app/main/default/objects/Account/fields/Delegacion2__c.field-meta.xml
<CustomField>
    <fullName>Delegacion2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Filial</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Filial</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Filiales</relationshipLabel>
    <relationshipName>Filiales</relationshipName>
    <type>Lookup</type>
</CustomField>