force-app/main/default/objects/Account/fields/Delegacion__c.field-meta.xml
<CustomField>
    <fullName>Delegacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delegación</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Delegaciones</relationshipLabel>
    <relationshipName>Delegaciones</relationshipName>
    <type>Lookup</type>
</CustomField>