force-app/main/default/objects/Account/fields/descripcion_agrupacion_os__c.field-meta.xml
<CustomField>
    <fullName>descripcion_agrupacion_os__c</fullName>
    <label>Descripción agrupación</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>