force-app/main/default/objects/Account/fields/Descripcion_delegacion__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_delegacion__c</fullName>
    <label>Descripción</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>