force-app/main/default/objects/Account/fields/Descripcion_Grupo_empresarial__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_Grupo_empresarial__c</fullName>
    <label>Descripción Grupo empresarial</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>