force-app/main/default/objects/Account/fields/Descripcion_Subgrupo__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_Subgrupo__c</fullName>
    <description>Campo cuenta empresa</description>
    <label>Descripción Subgrupo</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>