force-app/main/default/objects/Account/fields/Edad__c.field-meta.xml
<CustomField>
    <fullName>Edad__c</fullName>
    <formula>YEAR(TODAY()) - YEAR(  PersonBirthdate  ) - 
	IF(
		OR( 
			MONTH(TODAY()) &lt; MONTH(PersonBirthdate), 
				AND( 
					MONTH(TODAY()) == MONTH(PersonBirthdate), 
					DAY(TODAY()) &lt; DAY(PersonBirthdate) 
					) 
		), 
	1, 
	0 
	)

/*IF( NOT( ISBLANK(  PersonBirthdate  ) ) ,
  IF( DATE( 2000 , MONTH( PersonBirthdate ) , DAY( PersonBirthdate ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
     YEAR (Today()) - YEAR ( PersonBirthdate ),
     YEAR (Today()) - YEAR ( PersonBirthdate ) -1 ),
  null)*/</formula>
    <label>Edad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>