force-app/main/default/objects/Account/fields/Edad_limite__c.field-meta.xml
<CustomField>
    <fullName>Edad_limite__c</fullName>
    <label>Edad límite</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>