force-app/main/default/objects/Account/fields/Edad_maxima__c.field-meta.xml
<CustomField>
    <fullName>Edad_maxima__c</fullName>
    <description>campo de scoring</description>
    <label>Edad máxima</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>