force-app/main/default/objects/Account/fields/Egresado__c.field-meta.xml
<CustomField>
    <fullName>Egresado__c</fullName>
    <label>Egresado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>