force-app/main/default/objects/Account/fields/Empresa_codigo__c.field-meta.xml
<CustomField>
    <fullName>Empresa_codigo__c</fullName>
    <label>Empresa código</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>