force-app/main/default/objects/Account/fields/Empresa_sucursal__c.field-meta.xml
<CustomField>
    <fullName>Empresa_sucursal__c</fullName>
    <label>Empresa sucursal</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>