force-app/main/default/objects/Account/fields/Empresa_sucursal_nombre__c.field-meta.xml
<CustomField>
    <fullName>Empresa_sucursal_nombre__c</fullName>
    <label>Empresa sucursal nombre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>