force-app/main/default/objects/Account/fields/Envio_de_recibo__c.field-meta.xml
<CustomField>
    <fullName>Envio_de_recibo__c</fullName>
    <label>Envío de recibo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Envio_de_recibo</valueSetName>
    </valueSet>
</CustomField>