force-app/main/default/objects/Account/fields/Es_Prestador__c.field-meta.xml
<CustomField>
    <fullName>Es_Prestador__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>En caso de que sea prestador, la casilla estará activa. Deberá completar los campos correspondientes a la sección Prestador</inlineHelpText>
    <label>Es Prestador?</label>
    <type>Checkbox</type>
</CustomField>