force-app/main/default/objects/Account/fields/Es_Profesional__c.field-meta.xml
<CustomField>
    <fullName>Es_Profesional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es Profesional?</label>
    <type>Checkbox</type>
</CustomField>