force-app/main/default/objects/Account/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>Activo</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>Dado de baja</label>
            </value>
            <value>
                <fullName>G</fullName>
                <label>Generado</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>Suspendido</label>
            </value>
            <value>
                <fullName>A (Activo)</fullName>
                <isActive>false</isActive>
                <label>A (Activo)</label>
            </value>
            <value>
                <fullName>B (Baja)</fullName>
                <isActive>false</isActive>
                <label>B (Baja)</label>
            </value>
            <value>
                <fullName>En proceso</fullName>
                <isActive>false</isActive>
                <label>En proceso</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>