force-app/main/default/objects/Account/fields/Estado_de_cuenta__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_cuenta__c</fullName>
    <description>Color del estado de deuda de los asociados</description>
    <label>Estado de cuenta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Verde</fullName>
            </value>
            <value>
                <fullName>Amarillo</fullName>
            </value>
            <value>
                <fullName>Rojo</fullName>
            </value>
            <value>
                <fullName>Naranja</fullName>
                <isActive>false</isActive>
                <label>Naranja</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>