force-app/main/default/objects/Account/fields/Estado_de_cuenta_Corriente__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_cuenta_Corriente__c</fullName>
    <formula>IF(
				OR(
								CONTAINS(Color_estado_de_cuenta__c,&quot;AMARILLO&quot;),
								CONTAINS(Color_estado_de_cuenta__c,&quot;ROJO&quot;),
								CONTAINS(Color_estado_de_cuenta__c,&quot;NARANJA&quot;)
								),
				&quot;Tiene Deuda&quot;,&quot;No Tiene Deuda&quot;
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estado de cuenta Corriente</label>
    <type>Text</type>
</CustomField>