force-app/main/default/objects/Account/fields/Estado_de_cuenta_corriente_color__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_cuenta_corriente_color__c</fullName>
    <formula>CASE(
				 Color_estado_de_cuenta__c, 
				&quot;NARANJA&quot;,IMAGE(&quot;https://acasalud--c.visualforce.com/resource/1593003293000/Circulo_naranja?&quot;,&quot;NARANJA&quot;,25,25),
				&quot;VERDE&quot;,IMAGE(&quot;https://acasalud--c.visualforce.com/resource/1593003239000/Circulo_verde?&quot;,&quot;VERDE&quot;,25,25),
				&quot;AMARILLO&quot;,IMAGE(&quot;https://acasalud--c.visualforce.com/resource/1593003209000/Circulo_amarillo?&quot;,&quot;AMARILLO&quot;,25,25),
				&quot;ROJO&quot;,IMAGE(&quot;https://acasalud--c.visualforce.com/resource/1593004809000/Circulo_rojo?&quot;,&quot;ROJO&quot;,25,25),
				&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Color estado de cuenta corriente</label>
    <type>Text</type>
</CustomField>