force-app/main/default/objects/Account/fields/Estado_Prestador__c.field-meta.xml
<CustomField>
    <fullName>Estado_Prestador__c</fullName>
    <label>Estado Prestador</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>Activo</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>Baja</label>
            </value>
            <value>
                <fullName>G</fullName>
                <label>Generado</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>Suspendido</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>