force-app/main/default/objects/Account/fields/Fecha_Alta__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Alta__c</fullName>
    <label>Fecha Alta</label>
    <type>Date</type>
</CustomField>