force-app/main/default/objects/Account/fields/Fecha_alta_Administrativa__c.field-meta.xml
<CustomField>
    <fullName>Fecha_alta_Administrativa__c</fullName>
    <label>Fecha alta Administrativa</label>
    <type>Date</type>
</CustomField>