force-app/main/default/objects/Account/fields/Fecha_alta_prestador__c.field-meta.xml
<CustomField>
    <fullName>Fecha_alta_prestador__c</fullName>
    <label>Fecha alta prestador</label>
    <type>Date</type>
</CustomField>