force-app/main/default/objects/Account/fields/Fecha_baja_prestador__c.field-meta.xml
<CustomField>
    <fullName>Fecha_baja_prestador__c</fullName>
    <label>Fecha baja prestador</label>
    <type>Date</type>
</CustomField>