force-app/main/default/objects/Account/fields/Fecha_de_activacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_activacion__c</fullName>
    <label>Fecha de activación</label>
    <type>Date</type>
</CustomField>