force-app/main/default/objects/Account/fields/Fecha_de_baja__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_baja__c</fullName>
    <label>Fecha de baja</label>
    <type>DateTime</type>
</CustomField>