force-app/main/default/objects/Account/fields/Fecha_de_presentacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_presentacion__c</fullName>
    <description>Campo de cuenta empresa</description>
    <label>Fecha de presentación</label>
    <type>Date</type>
</CustomField>