force-app/main/default/objects/Account/fields/Fecha_nacimiento_efector__c.field-meta.xml
<CustomField>
    <fullName>Fecha_nacimiento_efector__c</fullName>
    <description>Fecha de nacimiento del Efector</description>
    <label>Fecha nacimiento</label>
    <type>Date</type>
</CustomField>