force-app/main/default/objects/Account/fields/Fecha_permanencia_desde__c.field-meta.xml
<CustomField>
    <fullName>Fecha_permanencia_desde__c</fullName>
    <label>Fecha permanencia desde</label>
    <type>Date</type>
</CustomField>