force-app/main/default/objects/Account/fields/Fecha_permanencia_hasta__c.field-meta.xml
<CustomField>
    <fullName>Fecha_permanencia_hasta__c</fullName>
    <label>Fecha permanencia hasta</label>
    <type>Date</type>
</CustomField>