force-app/main/default/objects/Account/fields/Fecha_Titulo__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Titulo__c</fullName>
    <label>Fecha Título</label>
    <type>Date</type>
</CustomField>