force-app/main/default/objects/Account/fields/Fecha_vigencia__c.field-meta.xml
<CustomField>
    <fullName>Fecha_vigencia__c</fullName>
    <label>Fecha vigencia</label>
    <type>Date</type>
</CustomField>