force-app/main/default/objects/Account/fields/Fecha_vigencia_prestador__c.field-meta.xml
<CustomField>
    <fullName>Fecha_vigencia_prestador__c</fullName>
    <label>Fecha vigencia prestador</label>
    <type>Date</type>
</CustomField>