force-app/main/default/objects/Account/fields/Gentilicio__c.field-meta.xml
<CustomField>
    <fullName>Gentilicio__c</fullName>
    <label>Gentilicio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>