force-app/main/default/objects/Account/fields/Grupos__c.field-meta.xml
<CustomField>
    <fullName>Grupos__c</fullName>
    <label>Grupos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>