force-app/main/default/objects/Account/fields/ID_18_digitos__c.field-meta.xml
<CustomField>
    <fullName>ID_18_digitos__c</fullName>
    <description>Formula que convierte le Id de 15 a 18 dígitos</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID 18 digitos</label>
    <type>Text</type>
</CustomField>