force-app/main/default/objects/Account/fields/Identificacion_de_afiliados__c.field-meta.xml
<CustomField>
    <fullName>Identificacion_de_afiliados__c</fullName>
    <label>Identificación de afiliados</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interna</fullName>
            </value>
            <value>
                <fullName>Empresa</fullName>
            </value>
            <value>
                <fullName>Empleador</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>