force-app/main/default/objects/Account/fields/Importe_de_canje__c.field-meta.xml
<CustomField>
    <fullName>Importe_de_canje__c</fullName>
    <label>Importe de canje</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>