force-app/main/default/objects/Account/fields/Indice_de_Rentabilidad__c.field-meta.xml
<CustomField>
    <fullName>Indice_de_Rentabilidad__c</fullName>
    <label>Indice de Rentabilidad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>