force-app/main/default/objects/Account/fields/Localidad_Nombre__c.field-meta.xml
<CustomField>
    <fullName>Localidad_Nombre__c</fullName>
    <formula>Localidad_new__r.Nombre_de_Localidad__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Localidad Nombre</label>
    <type>Text</type>
</CustomField>