force-app/main/default/objects/Account/fields/Matricula_nacional__c.field-meta.xml
<CustomField>
    <fullName>Matricula_nacional__c</fullName>
    <label>Matrícula nacional</label>
    <length>255</length>
    <type>Text</type>
</CustomField>