force-app/main/default/objects/Account/fields/Matricula_provincial__c.field-meta.xml
<CustomField>
    <fullName>Matricula_provincial__c</fullName>
    <label>Matrícula provincial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>