force-app/main/default/objects/Account/fields/Maximos_grupos__c.field-meta.xml
<CustomField>
    <fullName>Maximos_grupos__c</fullName>
    <label>Maximos grupos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>